adding songs to hub and refreshing list